unpackaged/main/default/objects/ServiceTerritory/fields/ST_Override_Related_List_URL__c.field-meta.xml
<CustomField>
    <fullName>ST_Override_Related_List_URL__c</fullName>
    <description>field to hold the url location of the ST Override related list</description>
    <label>ST Override Related List URL</label>
    <type>Url</type>
</CustomField>