unpackaged/main/default/objects/ServiceTerritory/fields/Timezone__c.field-meta.xml
<CustomField>
    <fullName>Timezone__c</fullName>
    <formula>TEXT(OperatingHours.TimeZone)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Timezone</label>
    <type>Text</type>
</CustomField>