unpackaged/main/default/objects/ServiceTerritory/fields/Travel_Branch_Id__c.field-meta.xml
<CustomField>
    <fullName>Travel_Branch_Id__c</fullName>
    <description>Travel Location Branch Id</description>
    <label>Travel Branch Id</label>
    <length>4</length>
    <type>Text</type>
</CustomField>