unpackaged/main/default/objects/ServiceTerritory/fields/Use_Arrival_Window__c.field-meta.xml
<CustomField>
    <fullName>Use_Arrival_Window__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Arrival Window</label>
    <type>Checkbox</type>
</CustomField>