unpackaged/main/default/objects/ServiceTerritory/recordTypes/Facility_Territory.recordType-meta.xml
<RecordType>
    <fullName>Facility_Territory</fullName>
    <active>true</active>
    <description>Territory that handles all types of services</description>
    <label>Facility Territory</label>
</RecordType>