unpackaged/main/default/objects/ServiceTerritory/recordTypes/Lightning_Scheduler.recordType-meta.xml
<RecordType>
    <fullName>Lightning_Scheduler</fullName>
    <active>true</active>
    <label>Lightning Scheduler</label>
</RecordType>