unpackaged/main/default/objects/ServiceTerritory/recordTypes/Map_Territory.recordType-meta.xml
<RecordType>
    <fullName>Map_Territory</fullName>
    <active>true</active>
    <description>Map Territory - only handle certain types of servicves</description>
    <label>Map Territory</label>
</RecordType>