unpackaged/main/default/objects/ServiceTerritory/validationRules/No_Update_to_Operating_Hours.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Update_to_Operating_Hours</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED(OperatingHoursId),
NOT(OR($Profile.Name = &quot;System Administrator&quot;,$Profile.Name = &quot;FSL Delegated Club Administrator&quot;,$Profile.Name=&quot;FSL Club Administrator&quot;))
)</errorConditionFormula>
    <errorMessage>You are not allowed to change the operating hours for a service territory.</errorMessage>
</ValidationRule>