unpackaged/main/default/objects/ServiceTerritory/listViews/All_Facility_Territories.listView-meta.xml
<ListView>
    <fullName>All_Facility_Territories</fullName>
    <columns>Name</columns>
    <columns>RecordType</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LastModifiedBy</columns>
    <columns>ParentTerritory</columns>
    <columns>OperatingHours</columns>
    <columns>IsActive</columns>
    <columns>Non_Payment_Facility__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACG_Facility__c</field>
        <operation>contains</operation>
        <value>J050</value>
    </filters>
    <label>All Facility Territories</label>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>