unpackaged/main/default/objects/ServiceTerritory/listViews/All_ServiceTerritories.listView-meta.xml
<ListView>
    <fullName>All_ServiceTerritories</fullName>
    <columns>Name</columns>
    <columns>Contract__c</columns>
    <columns>IsLandline__c</columns>
    <columns>Facility_Number__c</columns>
    <columns>IsActive</columns>
    <columns>OperatingHours</columns>
    <columns>Excluded_from_Case_Reassignment__c</columns>
    <columns>ParentTerritory</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LastModifiedBy</columns>
    <columns>Dispatch_Method__c</columns>
    <columns>RecordType</columns>
    <columns>Enabled_For_Appointment_Assistant__c</columns>
    <columns>Id</columns>
    <columns>Eligible_for_Payment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Facility_Number__c</field>
        <operation>contains</operation>
        <value>1116</value>
    </filters>
    <label>All Service Territories</label>
</ListView>