unpackaged/main/default/objects/ServiceTerritory/listViews/AVDService_Territories.listView-meta.xml
<ListView>
    <fullName>AVDService_Territories</fullName>
    <columns>Name</columns>
    <columns>Facility_Number__c</columns>
    <columns>CSR_Reporting_Group__c</columns>
    <columns>Dispatch_Method__c</columns>
    <columns>FSL_Manager__c</columns>
    <columns>IsActive</columns>
    <columns>OperatingHours</columns>
    <columns>ParentTerritory</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LastModifiedBy</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsActive</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Dispatch_Method__c</field>
        <operation>equals</operation>
        <value>AVD Dispatch</value>
    </filters>
    <label>AVD Service Territories</label>
    <sharedTo>
        <group>All_Administrators</group>
    </sharedTo>
</ListView>