unpackaged/main/default/objects/ServiceTerritory/listViews/Copy_of_Active.listView-meta.xml
<ListView>
    <fullName>Copy_of_Active</fullName>
    <columns>Name</columns>
    <columns>Facility_Number__c</columns>
    <columns>ParentTerritory</columns>
    <columns>IsActive</columns>
    <columns>Enabled_For_Appointment_Assistant__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsActive</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Enabled_For_Appointment_Assistant__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Appointment Assistant</label>
    <sharedTo>
        <group>All_Administrators</group>
    </sharedTo>
</ListView>