unpackaged/main/default/objects/ServiceTerritory/listViews/Dispatchers_All_Facility_Territories.listView-meta.xml
<ListView>
    <fullName>Dispatchers_All_Facility_Territories</fullName>
    <columns>Name</columns>
    <columns>Phone__c</columns>
    <columns>FSL_Manager__c</columns>
    <columns>Dispatch_Method__c</columns>
    <columns>ParentTerritory</columns>
    <columns>LAST_UPDATE</columns>
    <columns>IsActive</columns>
    <columns>Description</columns>
    <columns>Additional_Contact_Information__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsActive</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>RecordType</field>
        <operation>equals</operation>
        <value>ServiceTerritory.Facility_Territory</value>
    </filters>
    <filters>
        <field>OperatingHours</field>
        <operation>notEqual</operation>
        <value>base calendar</value>
    </filters>
    <label>Dispatchers - All Facility Territories</label>
    <sharedTo>
        <group>All_Community_Dispatchers</group>
        <role>Call_Center</role>
        <role>Club_Dispatcher</role>
        <role>Dispatcher_Supervisor</role>
    </sharedTo>
</ListView>