unpackaged/main/default/objects/ServiceTerritory/listViews/Fleet.listView-meta.xml
<ListView>
    <fullName>Fleet</fullName>
    <columns>Name</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LastModifiedBy</columns>
    <columns>ParentTerritory</columns>
    <columns>OperatingHours</columns>
    <columns>IsActive</columns>
    <columns>Enabled_For_Appointment_Assistant__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Name</field>
        <operation>contains</operation>
        <value>fleet</value>
    </filters>
    <label>Fleet</label>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>