unpackaged/main/default/objects/ServiceTerritory/listViews/INACTIVE.listView-meta.xml
<ListView>
    <fullName>INACTIVE</fullName>
    <columns>Name</columns>
    <columns>Facility_Number__c</columns>
    <columns>Auto_Create_STMs__c</columns>
    <columns>CSR_Reporting_Group__c</columns>
    <columns>ParentTerritory</columns>
    <columns>OperatingHours</columns>
    <columns>IsActive</columns>
    <columns>CREATED_DATE</columns>
    <columns>LastModifiedBy</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsActive</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>INACTIVE</label>
    <sharedTo>
        <group>All_Administrators</group>
    </sharedTo>
</ListView>