unpackaged/main/default/objects/ServiceTerritory/listViews/Landline_Service_Territories.listView-meta.xml
<ListView>
    <fullName>Landline_Service_Territories</fullName>
    <columns>Facility_Number__c</columns>
    <columns>Name</columns>
    <columns>IsActive</columns>
    <columns>Dispatch_Method__c</columns>
    <columns>IsLandline__c</columns>
    <columns>Phone__c</columns>
    <columns>ParentTerritory</columns>
    <columns>RecordType</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsActive</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>IsLandline__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Landline Service Territories</label>
</ListView>