unpackaged/main/default/objects/ServiceTerritory/listViews/Territory_Override_STs.listView-meta.xml
<ListView>
    <fullName>Territory_Override_STs</fullName>
    <booleanFilter>(1 OR 2) and 3</booleanFilter>
    <columns>Name</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LastModifiedBy</columns>
    <columns>ParentTerritory</columns>
    <columns>OperatingHours</columns>
    <columns>IsActive</columns>
    <columns>RecordType</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RecordType</field>
        <operation>equals</operation>
        <value>ServiceTerritory.Map_Territory</value>
    </filters>
    <filters>
        <field>RecordType</field>
        <operation>equals</operation>
        <value>ServiceTerritory.Facility_Territory</value>
    </filters>
    <filters>
        <field>Name</field>
        <operation>contains</operation>
        <value>1601</value>
    </filters>
    <label>Territory Override STs</label>
</ListView>